# Em_DNN

./: README.md
MNN_Mask/: FaceMask.py  change.py  facemask.mnn  facemask_quan.mnn  pretreatConfig.json
MNN_Mask/MNN_Mask/: CMakeLists.txt  FaceMask_MNN.cpp
MNN_Mask/caffe_model_change/: after-modify.caffemodel  face_mask_detection.prototxt
